quick_start/tensorboard/01_tensorboard_tensorboards-web-app_upstream_overlays_istio.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tensorboards-web-app
    kustomize.component: tensorboards-web-app
    run: tensorboards-web-app
  name: tensorboards-web-app-service
  namespace: kubeflow
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: tensorboards-web-app
    kustomize.component: tensorboards-web-app
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tensorboards-web-app
    kustomize.component: tensorboards-web-app
  name: tensorboards-web-app-deployment
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tensorboards-web-app
      kustomize.component: tensorboards-web-app
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: tensorboards-web-app
        kustomize.component: tensorboards-web-app
    spec:
      containers:
      - env:
        - name: APP_PREFIX
          value: /tensorboards
        - name: USERID_HEADER
          value: kubeflow-userid
        - name: USERID_PREFIX
          value: ""
        image: public.ecr.aws/j1r0q0g6/notebooks/tensorboards-web-app:v1.5.0
        name: tensorboards-web-app
        ports:
        - containerPort: 5000
      serviceAccountName: tensorboards-web-app-service-account
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app: tensorboards-web-app
    kustomize.component: tensorboards-web-app
  name: tensorboards-web-app-tensorboards-web-app
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - headers:
      request:
        add:
          x-forwarded-prefix: /tensorboards
    match:
    - uri:
        prefix: /tensorboards/
    rewrite:
      uri: /
    route:
    - destination:
        host: tensorboards-web-app-service.kubeflow.svc.cluster.local
        port:
          number: 80
